# salient

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust-clippy.yml
src/: cache.rs  config.rs  content.rs  https_tools.rs  lib.rs  main.rs  page.rs
www/: admin.html  default.css  index.html  not_found.html  style.css
www/admin/: actions.css  actions.html  settings.html  statistics.html
