[package]
name = "http-salient"
description = "Simple http webserver"
version = "0.1.1"
authors = ["GreatC0der"]
repository = "https://github.com/GreatC0der/salient"
license = "GPL-3.0"
readme = "readme.md"
edition = "2021"
keywords = ["server", "web", "http"]
categories = ["web-programming::http-server", "web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
once_cell = "1.18.0"
serde = "1.0.163"
serde_derive = "1.0.180"
